# M2-Miage_Cpp

./: CMakeLists.txt  README.md  main.cpp
Code_Source/Input/: Input.cpp  Input.h  Iris.cpp  Iris.h
Code_source/: input.cpp  input.h  perceptron.h
Input/: Image.cpp  Image.h  Input.cpp  Input.h  Iris.cpp  Iris.h
Perceptron/: Apprentissage.cpp  Apprentissage.h  Fonction_activation.cpp  Fonction_activation.h  Input_intermediaire.cpp  Input_intermediaire.h  NN1.cpp  NN1.h  NN2.cpp  NN2.h  Perceptron.cpp  Perceptron.h  Perceptron_cachee.cpp  Perceptron_cachee.h  Sigmoide.cpp  Sigmoide.h  Tanh.cpp  Tanh.h
